--- a/add-posts.html
+++ b/add-posts.html
@@ -12,6 +12,9 @@
     <label>Author
         <input type="text" name="author">
     </label>
+	<label>Отправить
+		<input type="submit">
+	</label>
 </form>
 </body>
 </html>
