--- a/contacts.html
+++ b/contacts.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contacts</title>
+	<link rel="stylesheet" href="styles/styles.css">
     <style>
         h1{
             color: #e14191;
